--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,19 @@
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-latest"
+    mac:
+      imageName: "macOS-latest"
+    windows:
+      imageName: "windows-latest"
+  maxParallel: 3
 
+pool:
+  vmImage: $(imageName)
+  
 variables:
   buildConfiguration: 'Release'
 
